src/components/astronaut-card/astronaut-card.sass
@keyframes from-transform
  from
    transform: none

.astronaut-card
  color: white
  position: relative
  padding: 3rem
  display: flex
  flex-direction: column
  justify-content: flex-end
  overflow: hidden
  transition: box-shadow .5s ease

  &:before
    content: ''
    background: #0b0c0e
    z-index: 2
    position: absolute
    top: -1rem
    left: -1rem
    right: -1rem
    bottom: -1rem
    opacity: .7
    transition: opacity .2s ease

  > .shine
    content: ''
    z-index: 3
    position: absolute
    top: 0
    left: 0
    width: 100%
    height: 100%

  > img
    position: absolute
    top: 0
    left: 0
    z-index: 1
    width: 100%
    height: 100%
    object-fit: cover

  > .name
    font-size: 4rem
    line-height: 5rem
    font-weight: bold
    text-transform: uppercase

  > .name, > .info
    position: relative
    z-index: 3
    transition: transform .2s ease

  > .info
    padding-top: 1.5rem
    height: 0
    opacity: 0
    transition: height .3s ease, opacity .3s ease, padding .3s ease
    overflow: hidden

  > .info > p
    font-size: 1.6rem
    line-height: 2.4rem
    margin-bottom: 1em

    &:last-child
      margin-bottom: 0

  .no-touchevents &:hover
    z-index: 10
    animation: from-transform .5s ease
    box-shadow: 0 0.5rem 10rem rgba(black, 0.2)

    // &:before
    //   opacity: .6

    > .info
      opacity: 1

  .no-touchevents &:not(:hover)
    transform: none !important
    transition: transform .5s ease

  .no-touchevents &:not(:hover):not(:focus)
    > .info
      height: 0 !important
      padding-top: 0 !important

  &:focus
    outline: none

    &:before
      opacity: 0.6

    > .info
      opacity: 1

  .touchevents & > .info
    display: none

  @media screen and (max-width: $small-grid)
    padding: 1.5rem

    > .name
      font-size: 1.6rem
      line-height: 2rem

